--- a/home/index.html
+++ b/home/index.html
@@ -20,6 +20,7 @@ redirect_from: "/"
 		<a href="/xphoenix/index.html">X Phoenix</a>
 		<a href="/undefinedgames/index.html">Undefined Games</a>
 		<a href="/vrtx/index.html">VØRT3X</a>
+		<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 	  </nav>
 	</div>
 	<div class=navbar>
