--- a/home/index.html
+++ b/home/index.html
@@ -15,7 +15,7 @@ redirect_from: "/"
   <body class="background">
   
     <div class=navbar>
-	  <nav id=topnav style=inline>
+	  <nav id=topnav id=navbar style=inline>
 	    <a href="/home/index.html" class=logo>LOK</a>
 	    <a href="/hydraicempire/index.html">Hydraic Empire</a>
 	    <a href="/xphoenix/index.html">X Phoenix</a>
