--- a/home/index.html
+++ b/home/index.html
@@ -14,18 +14,18 @@ redirect_from: "/"
 
   <body class="background">
   
-    <div class=navbar>
-	  <nav class=topnav id=navbar style=inline>
-	    <a href="/home/index.html" class=logo>LOK</a>
+    <div class="navbar">
+	  <nav class="topnav" id="navbar" style=inline>
+	    <a href="/home/index.html" class="logo">LOK</a>
 	    <a href="/hydraicempire/index.html">Hydraic Empire</a>
 	    <a href="/xphoenix/index.html">X Phoenix</a>
 	    <a href="/undefinedgames/index.html">Undefined Games</a>
 	    <a href="/vrtx/index.html">VØRT3X</a>
-	    <a href="javascript:void(0);" class=icon onclick="myFunction()">&#9776;</a>
+	    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 	  </nav>
 	</div>
-	<div class=navbar>
-	  <nav id=subnav style="inline">
+	<div class="navbar">
+	  <nav id="subnav" style="inline">
 	    <a href="author.html">Writing</a>
 		<a href="lore.html">Lore</a>
 		<a href="code.html">Programming Skills</a>
@@ -33,12 +33,12 @@ redirect_from: "/"
 	  </nav>
 	</div>
 	
-	<div class=bodyheader>
-	  <p id=bodyhead>Welcome!</p>
-	  <p id=bodybody>This is the main page for my website that I coded entirely myself!</p>
+	<div class="bodyheader">
+	  <p id="bodyhead">Welcome!</p>
+	  <p id="bodybody">This is the main page for my website that I coded entirely myself!</p>
 	</div>
 	
-	<div class=mainbody>
+	<div class="mainbody">
 	  <img src=# />
 	</div>
 	
