--- a/home/index.html
+++ b/home/index.html
@@ -39,7 +39,7 @@ redirect_from: "/"
 	</div>
 	
 	<div class="mainbody">
-	  <img src=# />
+	  <img src="http://wallpapercave.com/wp/hNmtPnY.jpg" />
 	</div>
 	
   </body>
