--- a/home/index.html
+++ b/home/index.html
@@ -27,7 +27,7 @@ redirect_from: "/"
 	<div class="navbar">
 	  <nav id="subnav" style="inline">
 	    <a href="author.html">Writing</a>
-		<a href="lore.html">Lore</a>
+		<a href="#">TBD</a>
 		<a href="code.html">Programming Skills</a>
 		<a href="about.html">About Me</a>
 	  </nav>
@@ -39,7 +39,7 @@ redirect_from: "/"
 	</div>
 	
 	<div class="mainbody">
-	  <img src="http://wallpapercave.com/wp/hNmtPnY.jpg" />
+	  <img src="http://www.wallpaperup.com/uploads/wallpapers/2015/12/17/863931/0378e2c066e75d180445fb8c6bec0fdf.jpg" />
 	</div>
 	
   </body>
