--- a/404.html
+++ b/404.html
@@ -1,3 +1,34 @@
 ---
 permalink: /404.html
 ---
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Home | LordOfKhaos</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+	<script type="text/javascript" src="assets/js/responsive.js"></script>
+  </head>
+
+  <body class="background">
+  
+    <div class="navbar">
+	  <nav class="topnav" id="navbar" style=inline>
+	    <a href="/home/index.html" class="logo">LOK</a>
+	    <a href="/hydraicempire/index.html">Hydraic Empire</a>
+	    <a href="/xphoenix/index.html">X Phoenix</a>
+	    <a href="/undefinedgames/index.html">Undefined Games</a>
+	    <a href="/vrtx/index.html">VØRT3X</a>
+	    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+	  </nav>
+	</div>
+	<div class="navbar">
+	  <nav id="subnav" style="inline">
+	    <a href="author.html">Writing</a>
+		<a href="#">TBD</a>
+		<a href="code.html">Programming Skills</a>
+		<a href="about.html">About Me</a>
+	  </nav>
+	</div>
