--- a/404.html
+++ b/404.html
@@ -7,9 +7,9 @@ permalink: /404.html
     <title>Home | LordOfKhaos</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="home/assets/css/main.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-	<script type="text/javascript" src="assets/js/responsive.js"></script>
+	<script type="text/javascript" src="home/assets/js/responsive.js"></script>
   </head>
 
   <body class="background">
@@ -31,4 +31,9 @@ permalink: /404.html
 		<a href="code.html">Programming Skills</a>
 		<a href="about.html">About Me</a>
 	  </nav>
+	</div>
+        
+	<div class="bodyhead">
+	  <h1 class="404">404</h1>
+	  <p class="404">Whoops! Something isn't right here. Take a look at the URL, see if something is spelled wrong. If not, this page probably doesn't exist yet!</p>
 	</div>
