--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@ permalink: /404.html
 	<link rel="stylesheet" href="/home/assets/css/main.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 	<script type="text/javascript" src="/home/assets/js/responsive.js"></script>
-	<link rel="shortcut icon" href="#" />
+	<link rel="shortcut icon" href="/capital_L.ico" />
   </head>
 
   <body class="background">
