--- a/home/index.html
+++ b/home/index.html
@@ -10,6 +10,7 @@ redirect_from: "/"
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 	<script type="text/javascript" src="assets/js/responsive.js"></script>
+	<link rel="shortcut icon" href="/capital_L.ico" />
   </head>
 
   <body class="background">
