--- a/home/index.html
+++ b/home/index.html
@@ -14,6 +14,21 @@ redirect_from: "/"
   </head>
 
   <body class="background">
+	  
+    <div class="searchbar">
+      <script>
+  (function() {
+    var cx = '012029434224973226848:zhnnxy1bfdw';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+      </script>
+      <gcse:search></gcse:search>
+    </div>
   
     <div class="navbar">
 	  <nav class="topnav" id="navbar" style=inline>
