--- a/home/index.html
+++ b/home/index.html
@@ -9,6 +9,7 @@ redirect_from: "/"
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300" rel="stylesheet">
 	<script type="text/javascript" src="assets/js/responsive.js"></script>
 	<link rel="shortcut icon" href="/capital_L.ico" />
   </head>
