--- a/home/index.html
+++ b/home/index.html
@@ -58,6 +58,26 @@ redirect_from: "/"
 	<div class="mainbody">
 	  <img src="http://www.wallpaperup.com/uploads/wallpapers/2015/12/17/863931/0378e2c066e75d180445fb8c6bec0fdf.jpg" />
 	</div>
+	  
+	<!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+var sc_project=11425396; 
+var sc_invisible=0; 
+var sc_security="abafe488"; 
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="web stats"
+href="http://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="//c.statcounter.com/11425396/0/abafe488/0/" alt="web
+stats"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
+<a href="http://statcounter.com/p11425396/?guest=1">View My
+Stats</a>
 	
   </body>
 </html>
