--- a/home/index.html
+++ b/home/index.html
@@ -15,22 +15,6 @@ redirect_from: "/"
   </head>
 
   <body class="background">
-	  
-    <div class="searchbar">
-      <script>
-  (function() {
-    var cx = '012029434224973226848:zhnnxy1bfdw';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-      </script>
-      <gcse:search></gcse:search>
-    </div>
-  
     <div class="navbar">
 	  <nav class="topnav" id="navbar" style=inline>
 	    <a href="/home/index.html" class="logo">LOK</a>
@@ -38,6 +22,7 @@ redirect_from: "/"
 	    <a href="/xphoenix/index.html">X Phoenix</a>
 	    <a href="/undefinedgames/index.html">Undefined Games</a>
 	    <a href="/vrtx/index.html">VØRT3X</a>
+	    <a href="https://iogamesspaceclone.lordofkhaos.com">IOGames.Space</a>
 	    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 	  </nav>
 	</div>
