--- a/undefinedgames/index.html
+++ b/undefinedgames/index.html
@@ -22,5 +22,12 @@
 		var player = new Twitch.Player("{PLAYER_DIV_ID}", options);
 		player.setVolume(0.5);
 </script>
+	<iframe frameborder="0"
+        scrolling="no"
+        id="chat_embed"
+        src="http://www.twitch.tv/{CHANNEL}/chat"
+        height="{HEIGHT}"
+        width="{WIDTH}">
+	</iframe>
 </body>
 </html>
