--- a/undefinedgames/index.html
+++ b/undefinedgames/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Home | LordOfKhaos</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="/undefinedgames/assets/css/main.css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-	<script type="text/javascript" src="/home/assets/js/responsive.js"></script>
-	<link rel="shortcut icon" href="/capital_L.ico" />
-</head>
-<body class="background">
-	<script src= "http://player.twitch.tv/js/embed/v1.js"></script>
-  <div id="{PLAYER_DIV_ID}"></div>
-	<script type="text/javascript">
+	<head>
+		<title>Home | LordOfKhaos</title>
+		<meta charset="utf-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1">
+				<link rel="stylesheet" href="/undefinedgames/assets/css/main.css" />
+				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+				<script type="text/javascript" src="/home/assets/js/responsive.js"></script>
+				<link rel="shortcut icon" href="/capital_L.ico" />
+			</head>
+			<body class="background">
+				<script src= "http://player.twitch.tv/js/embed/v1.js"></script>
+				<div id="{PLAYER_DIV_ID}"></div>
+				<script type="text/javascript">
 		var options = {
 			width: 854,
 			height: 480,
@@ -22,12 +22,11 @@
 		var player = new Twitch.Player("{PLAYER_DIV_ID}", options);
 		player.setVolume(0.5);
 </script>
-	<iframe frameborder="0"
+				<iframe frameborder="0"
         scrolling="no"
         id="chat_embed"
         src="http://www.twitch.tv/{CHANNEL}/chat"
         height="{HEIGHT}"
-        width="{WIDTH}">
-	</iframe>
-</body>
-</html>
+        width="{WIDTH}"></iframe>
+			</body>
+		</html>
