--- a/undefinedgames/index.html
+++ b/undefinedgames/index.html
@@ -25,8 +25,8 @@
 				<iframe frameborder="0"
         scrolling="no"
         id="chat_embed"
-        src="http://www.twitch.tv/{CHANNEL}/chat"
-        height="{HEIGHT}"
-        width="{WIDTH}"></iframe>
+        src="http://www.twitch.tv/undefinedgames/chat"
+        height="500"
+        width="350"></iframe>
 			</body>
 		</html>
