--- a/undefinedgames/index.html
+++ b/undefinedgames/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Home | LordOfKhaos</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="/undefinedgames/assets/css/main.css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-	<script type="text/javascript" src="/home/assets/js/responsive.js"></script>
-	<link rel="shortcut icon" href="/capital_L.ico" />
-</head>
-<body class="background">
-	<script src= "http://player.twitch.tv/js/embed/v1.js"></script>
-	<div id="{PLAYER_DIV_ID}"></div>
-	<script type="text/javascript">
+	<head>
+		<title>Home | LordOfKhaos</title>
+		<meta charset="utf-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1">
+				<link rel="stylesheet" href="/undefinedgames/assets/css/main.css" />
+				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+				<script type="text/javascript" src="/home/assets/js/responsive.js"></script>
+				<link rel="shortcut icon" href="/capital_L.ico" />
+			</head>
+			<body class="background">
+				<div class="navbar">
+					<nav class="topnav" id="navbar" style=inline>
+						<a href="/home/index.html" class="logo">LOK</a>
+						<a href="/hydraicempire/index.html">Hydraic Empire</a>
+						<a href="/xphoenix/index.html">X Phoenix</a>
+						<a href="/undefinedgames/index.html">Undefined Games</a>
+						<a href="/vrtx/index.html">VØRT3X</a>
+						<a href="https://iogamesspaceclone.lordofkhaos.com">IOGames.Space</a>
+						<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+					</nav>
+				</div>
+				<script src= "http://player.twitch.tv/js/embed/v1.js"></script>
+				<div id="{PLAYER_DIV_ID}"></div>
+				<script type="text/javascript">
 var options = {
 width: 854,
 height: 480,
@@ -22,13 +33,13 @@ channel: "undefinedgames",
 var player = new Twitch.Player("{PLAYER_DIV_ID}", options);
 player.setVolume(0.5);
 </script>
-	<iframe frameborder="0"
+				<iframe frameborder="0"
 	scrolling="no"
 	id="chat_embed"
 	src="http://www.twitch.tv/undefinedgames/chat"
 	height="500"
 	width="854"></iframe>
-</body>
-</html>
-</body>
+			</body>
+		</html>
+	</body>
 </html>
