--- a/undefinedgames/index.html
+++ b/undefinedgames/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Home | LordOfKhaos</title>
+		<title>UndefinedGames | LordOfKhaos</title>
 		<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 				<link rel="stylesheet" href="/undefinedgames/assets/css/main.css" />
