--- a/undefinedgames/index.html
+++ b/undefinedgames/index.html
@@ -21,9 +21,11 @@
 						<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 					</nav>
 				</div>
-				<script src= "http://player.twitch.tv/js/embed/v1.js"></script>
-				<div id="{PLAYER_DIV_ID}"></div>
-				<script type="text/javascript">
+				<div id=outer>
+					<div id=inner>
+						<script src= "http://player.twitch.tv/js/embed/v1.js"></script>
+						<div id="{PLAYER_DIV_ID}"></div>
+						<script type="text/javascript">
 var options = {
 width: 854,
 height: 480,
@@ -33,12 +35,14 @@ channel: "undefinedgames",
 var player = new Twitch.Player("{PLAYER_DIV_ID}", options);
 player.setVolume(0.5);
 </script>
-				<iframe frameborder="0"
+						<iframe frameborder="0"
 	scrolling="no"
 	id="chat_embed"
 	src="http://www.twitch.tv/undefinedgames/chat"
 	height="500"
 	width="854"></iframe>
+					</div>
+				</div>
 			</body>
 		</html>
 	</body>
