--- a/undefinedgames/index.html
+++ b/undefinedgames/index.html
@@ -21,7 +21,7 @@
 						<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 					</nav>
 				</div>
-				<div id=outer>
+				<div id=outer style="width:100%">
 					<div id=inner>
 						<script src= "http://player.twitch.tv/js/embed/v1.js"></script>
 						<div id="{PLAYER_DIV_ID}"></div>
