--- a/home/index.html
+++ b/home/index.html
@@ -41,7 +41,7 @@ redirect_from: "/"
 	</div>
 	
 	<div class="mainbody">
-	  <img src="http://www.wallpaperup.com/uploads/wallpapers/2015/12/17/863931/0378e2c066e75d180445fb8c6bec0fdf.jpg" />
+	  <img src="/img/default.jpg" />
 	</div>
 	  
 	<!-- Start of StatCounter Code for Default Guide -->
