--- a/home/index.html
+++ b/home/index.html
@@ -41,7 +41,7 @@ redirect_from: "/"
 	</div>
 	
 	<div class="mainbody">
-	  <img src="/img/default.jpg" />
+	  <img src="/home/img/default.jpg" />
 	</div>
 	  
 	<!-- Start of StatCounter Code for Default Guide -->
