--- a/home/index.html
+++ b/home/index.html
@@ -29,7 +29,7 @@ redirect_from: "/"
 	<div class="navbar">
 	  <nav id="subnav" style="inline">
 	    <a href="author.html">Writing</a>
-		<a href="#">TBD</a>
+		<a href="#">{{}}</a>
 		<a href="code.html">Programming Skills</a>
 		<a href="about.html">About Me</a>
 	  </nav>
