--- a/home/index.html
+++ b/home/index.html
@@ -61,7 +61,7 @@ class="statcounter"
 src="//c.statcounter.com/11425396/0/abafe488/0/" alt="web
 stats"></a></div></noscript>
 <!-- End of StatCounter Code for Default Guide -->
-<a href="http://statcounter.com/p11425396/?guest=1">View My
+<a href="http://statcounter.com/p11425396/?guest=1" target="_blank">View My
 Stats</a>
 	
   </body>
