--- a/undefinedgames/index.html
+++ b/undefinedgames/index.html
@@ -27,8 +27,8 @@
 						<div id="{PLAYER_DIV_ID}"></div>
 						<script type="text/javascript">
 var options = {
-width: 854,
-height: 480,
+width: 100%,
+height: auto,
 channel: "undefinedgames",
 //video: "{VIDEO_ID}"
 };
