--- a/undefinedgames/index.html
+++ b/undefinedgames/index.html
@@ -22,19 +22,12 @@
 					</nav>
 				</div>
 				<div id=outer style="width:100%">
-					<div id=inner>
-						<script src= "http://player.twitch.tv/js/embed/v1.js"></script>
-						<div id="{PLAYER_DIV_ID}"></div>
-						<script type="text/javascript">
-var options = {
-width: 854,
-height: 480,
-channel: "undefinedgames",
-//video: "{VIDEO_ID}"
-};
-var player = new Twitch.Player("{PLAYER_DIV_ID}", options);
-player.setVolume(0.5);
-</script>
+					<div id=inner>    
+						<iframe
+        src="http://player.twitch.tv/?channel=undefinedgames"
+        scrolling="no"
+        allowfullscreen="true">
+    </iframe>
 						<iframe frameborder="0"
 	scrolling="no"
 	id="chat_embed"
