--- a/undefinedgames/index.html
+++ b/undefinedgames/index.html
@@ -32,8 +32,7 @@
 	scrolling="no"
 	id="chat_embed"
 	src="http://www.twitch.tv/undefinedgames/chat"
-	height="500"
-	width="854"></iframe>
+</iframe>
 					</div>
 				</div>
 			</body>
