--- a/undefinedgames/index.html
+++ b/undefinedgames/index.html
@@ -28,11 +28,11 @@
         scrolling="no"
         allowfullscreen="true">
     </iframe>
-						<iframe frameborder="0"
+						<!-- <iframe frameborder="0"
 	scrolling="no"
 	id="chat_embed"
 	src="http://www.twitch.tv/undefinedgames/chat"
-</iframe>
+</iframe> -->
 					</div>
 				</div>
 			</body>
