--- a/home/index.html
+++ b/home/index.html
@@ -41,7 +41,7 @@ redirect_from: "/"
 	</div>
 	
 	<div class="mainbody">
-	  <img src="/home/img/default.jpg" height="30%" width="30%"/>
+	  <img src="/home/img/default.jpg" height="30%" width="30%" style="align:center"/>
 	</div>
 	  
 	<!-- Start of StatCounter Code for Default Guide -->
